website has working add, skip buttons, queue works correctly (unless edge case). add mention of website to more commands?? lacks css, queue manipulation, pauseorresume